--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "tsx": "^4.0.0" 
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -97,5 +98,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "prisma": { "seed": "tsx prisma/seed.ts" }
 }
