feat: add readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
+version: '3.8'
+
 services:
-  postgres:
+  db:
     image: postgres:15
-    container_name: modular_api
+    restart: unless-stopped
     environment:
       POSTGRES_USER: modular
       POSTGRES_PASSWORD: modular
       POSTGRES_DB: modular_db
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
